Bug fixed: padding and alignment.

--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -14,7 +14,7 @@
   }
 
   .main-wrapper {
-    padding: 30px;
+    padding: 10px;
   }
 
   .main-wrapper .time {
